# trade-planner

./: .gitignore  README.md  cvxpy_mosek_infeas_diagnostics.py  environment.yml  pyproject.toml  trade_planner.py
artifacts/: alpha_confidence_dev_60_daily.csv  alpha_confidence_dev_60_paired.csv  alpha_confidence_dev_60_schedules.csv  alpha_confidence_dev_60_summary.csv  alpha_confidence_dev_60_trials.csv  alpha_confidence_dev_65_daily.csv  alpha_confidence_dev_65_paired.csv  alpha_confidence_dev_65_schedules.csv  alpha_confidence_dev_65_summary.csv  alpha_confidence_dev_65_trials.csv  alpha_confidence_dev_70_daily.csv  alpha_confidence_dev_70_paired.csv  alpha_confidence_dev_70_schedules.csv  alpha_confidence_dev_70_summary.csv  alpha_confidence_dev_70_trials.csv  alpha_confidence_fixed_dev_60_daily.csv  alpha_confidence_fixed_dev_60_paired.csv  alpha_confidence_fixed_dev_60_schedules.csv  alpha_confidence_fixed_dev_60_summary.csv  alpha_confidence_fixed_dev_60_trials.csv  alpha_confidence_fixed_dev_65_daily.csv  alpha_confidence_fixed_dev_65_paired.csv  alpha_confidence_fixed_dev_65_schedules.csv  alpha_confidence_fixed_dev_65_summary.csv  alpha_confidence_fixed_dev_65_trials.csv  alpha_confidence_fixed_dev_70_daily.csv  alpha_confidence_fixed_dev_70_paired.csv  alpha_confidence_fixed_dev_70_schedules.csv  alpha_confidence_fixed_dev_70_summary.csv  alpha_confidence_fixed_dev_70_trials.csv  alpha_confidence_fixed_dev_75_daily.csv  alpha_confidence_fixed_dev_75_paired.csv  alpha_confidence_fixed_dev_75_schedules.csv  alpha_confidence_fixed_dev_75_summary.csv  (+423 more)
(+97 files in other folders)
