[project]
name = "trade-planner"
version = "0.1.0"
description = "Pluggable daily basket execution planner."
requires-python = ">=3.10"
dependencies = [
    "cvxpy",
    "numpy",
    "osqp",
    "pandas",
]

[project.optional-dependencies]
mosek = ["mosek>=11,<12"]

[tool.setuptools]
packages = ["trade_planner"]
